bdr.BDR2.scala.error
Erreur de compilation :
BDR2:18: error: not found: value actions
  case _ => actions=""
            ^